--- a/.final_builds/jobs/nginx/index.yml
+++ b/.final_builds/jobs/nginx/index.yml
@@ -8,4 +8,8 @@ builds:
     version: b88ebefa23352afc2e516f7a238f7b4a91a0daf8
     sha1: 51286ebe9506403f20b9951decd585deb04e37bd
     blobstore_id: 8ccdd7f3-4069-46be-a975-e3bfb1629a01
+  64a2f153ad02c4f1d5d1bbc28e285d727f34e379:
+    version: 64a2f153ad02c4f1d5d1bbc28e285d727f34e379
+    sha1: 2fa811312a1e296aaa6f28cd315ce58561101ab9
+    blobstore_id: 531eabbf-4094-4488-9cae-7e799992d64d
 format-version: '2'
